// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MPollBody renders a finished poll 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll ended"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 10.659V19q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21H5q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h8.341A6 6 0 0 0 13 5H5v14h14v-8a6 6 0 0 0 2-.341"
        />
        <path
          d="M13.803 8a6 6 0 0 0 1.88 2H13a.97.97 0 0 1-.713-.287A.97.97 0 0 1 12 9q0-.424.287-.713A.97.97 0 0 1 13 8zm2.91 7.713A.97.97 0 0 1 16 16h-3a.97.97 0 0 1-.713-.287A.97.97 0 0 1 12 15q0-.424.287-.713A.97.97 0 0 1 13 14h3q.424 0 .712.287.288.288.288.713 0 .424-.288.713m-6.299-5.3A1.93 1.93 0 0 1 9 11q-.825 0-1.412-.588A1.93 1.93 0 0 1 7 9q0-.825.588-1.412A1.93 1.93 0 0 1 9 7q.825 0 1.412.588Q11 8.175 11 9t-.588 1.412m.001 6.001A1.93 1.93 0 0 1 9 17q-.825 0-1.412-.587A1.93 1.93 0 0 1 7 15q0-.825.588-1.412A1.93 1.93 0 0 1 9 13q.825 0 1.412.588Q11 14.175 11 15q0 .824-.588 1.413m12.295-14.12a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L18 5.586l3.293-3.293a1 1 0 0 1 1.414 0"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 1, Pizza, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 2, Poutine, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_checked mx_PollOption_ended"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled mx_StyledRadioButton_checked"
        >
          <input
            aria-label="Option 3, Italian, this option won the vote, 2 votes, you voted for this option"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  <div
                    class="mx_PollOption_winnerIcon"
                  />
                  2 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 67%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 4, Wings, 1 vote"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  1 vote
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 33%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 3
    </div>
  </fieldset>
</div>
`;

exports[`MPollBody renders a finished poll with multiple winners 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll ended"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 10.659V19q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21H5q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h8.341A6 6 0 0 0 13 5H5v14h14v-8a6 6 0 0 0 2-.341"
        />
        <path
          d="M13.803 8a6 6 0 0 0 1.88 2H13a.97.97 0 0 1-.713-.287A.97.97 0 0 1 12 9q0-.424.287-.713A.97.97 0 0 1 13 8zm2.91 7.713A.97.97 0 0 1 16 16h-3a.97.97 0 0 1-.713-.287A.97.97 0 0 1 12 15q0-.424.287-.713A.97.97 0 0 1 13 14h3q.424 0 .712.287.288.288.288.713 0 .424-.288.713m-6.299-5.3A1.93 1.93 0 0 1 9 11q-.825 0-1.412-.588A1.93 1.93 0 0 1 7 9q0-.825.588-1.412A1.93 1.93 0 0 1 9 7q.825 0 1.412.588Q11 8.175 11 9t-.588 1.412m.001 6.001A1.93 1.93 0 0 1 9 17q-.825 0-1.412-.587A1.93 1.93 0 0 1 7 15q0-.825.588-1.412A1.93 1.93 0 0 1 9 13q.825 0 1.412.588Q11 14.175 11 15q0 .824-.588 1.413m12.295-14.12a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L18 5.586l3.293-3.293a1 1 0 0 1 1.414 0"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption mx_PollOption_checked mx_PollOption_ended"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled mx_StyledRadioButton_checked"
        >
          <input
            aria-label="Option 1, Pizza, this option won the vote, 2 votes, you voted for this option"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  <div
                    class="mx_PollOption_winnerIcon"
                  />
                  2 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 50%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 2, Poutine, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 3, Italian, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_checked mx_PollOption_ended"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled mx_StyledRadioButton_checked"
        >
          <input
            aria-label="Option 4, Wings, this option won the vote, 2 votes, you voted for this option"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  <div
                    class="mx_PollOption_winnerIcon"
                  />
                  2 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 50%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 4
    </div>
  </fieldset>
</div>
`;

exports[`MPollBody renders a finished poll with no votes 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll ended"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 10.659V19q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21H5q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h8.341A6 6 0 0 0 13 5H5v14h14v-8a6 6 0 0 0 2-.341"
        />
        <path
          d="M13.803 8a6 6 0 0 0 1.88 2H13a.97.97 0 0 1-.713-.287A.97.97 0 0 1 12 9q0-.424.287-.713A.97.97 0 0 1 13 8zm2.91 7.713A.97.97 0 0 1 16 16h-3a.97.97 0 0 1-.713-.287A.97.97 0 0 1 12 15q0-.424.287-.713A.97.97 0 0 1 13 14h3q.424 0 .712.287.288.288.288.713 0 .424-.288.713m-6.299-5.3A1.93 1.93 0 0 1 9 11q-.825 0-1.412-.588A1.93 1.93 0 0 1 7 9q0-.825.588-1.412A1.93 1.93 0 0 1 9 7q.825 0 1.412.588Q11 8.175 11 9t-.588 1.412m.001 6.001A1.93 1.93 0 0 1 9 17q-.825 0-1.412-.587A1.93 1.93 0 0 1 7 15q0-.825.588-1.412A1.93 1.93 0 0 1 9 13q.825 0 1.412.588Q11 14.175 11 15q0 .824-.588 1.413m12.295-14.12a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L18 5.586l3.293-3.293a1 1 0 0 1 1.414 0"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 1, Pizza, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 2, Poutine, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 3, Italian, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 4, Wings, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 0
    </div>
  </fieldset>
</div>
`;

exports[`MPollBody renders a poll that I have not voted in 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10q.424 0 .712-.287A.97.97 0 0 0 17 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 8h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 9q0 .424.287.713.288.287.713.287zm0 6q.424 0 .712-.287A.97.97 0 0 0 17 15a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 14h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 15q0 .424.287.713.288.287.713.287zm-7-5q.825 0 1.412-.588Q11 9.826 11 9t-.588-1.412A1.93 1.93 0 0 0 9 7q-.825 0-1.412.588A1.93 1.93 0 0 0 7 9q0 .825.588 1.412Q8.175 11 9 11m0 6q.825 0 1.412-.587Q11 15.825 11 15t-.588-1.412A1.93 1.93 0 0 0 9 13q-.825 0-1.412.588A1.93 1.93 0 0 0 7 15q0 .824.588 1.413Q8.175 17 9 17m-4 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h14q.824 0 1.413.587Q21 4.176 21 5v14q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21zm0-2h14V5H5z"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 1, Pizza"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 2, Poutine"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 3, Italian"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 4, Wings"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 3
    </div>
  </fieldset>
</div>
`;

exports[`MPollBody renders a poll with local, non-local and invalid votes 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10q.424 0 .712-.287A.97.97 0 0 0 17 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 8h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 9q0 .424.287.713.288.287.713.287zm0 6q.424 0 .712-.287A.97.97 0 0 0 17 15a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 14h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 15q0 .424.287.713.288.287.713.287zm-7-5q.825 0 1.412-.588Q11 9.826 11 9t-.588-1.412A1.93 1.93 0 0 0 9 7q-.825 0-1.412.588A1.93 1.93 0 0 0 7 9q0 .825.588 1.412Q8.175 11 9 11m0 6q.825 0 1.412-.587Q11 15.825 11 15t-.588-1.412A1.93 1.93 0 0 0 9 13q-.825 0-1.412.588A1.93 1.93 0 0 0 7 15q0 .824.588 1.413Q8.175 17 9 17m-4 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h14q.824 0 1.413.587Q21 4.176 21 5v14q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21zm0-2h14V5H5z"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 1, Pizza, 1 vote"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  1 vote
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 20%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 2, Poutine, 0 votes"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_checked"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled mx_StyledRadioButton_checked"
        >
          <input
            aria-label="Option 3, Italian, 3 votes, you voted for this option"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  3 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 60%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 4, Wings, 1 vote"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  1 vote
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 20%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 5
    </div>
  </fieldset>
</div>
`;

exports[`MPollBody renders a poll with no votes 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10q.424 0 .712-.287A.97.97 0 0 0 17 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 8h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 9q0 .424.287.713.288.287.713.287zm0 6q.424 0 .712-.287A.97.97 0 0 0 17 15a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 14h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 15q0 .424.287.713.288.287.713.287zm-7-5q.825 0 1.412-.588Q11 9.826 11 9t-.588-1.412A1.93 1.93 0 0 0 9 7q-.825 0-1.412.588A1.93 1.93 0 0 0 7 9q0 .825.588 1.412Q8.175 11 9 11m0 6q.825 0 1.412-.587Q11 15.825 11 15t-.588-1.412A1.93 1.93 0 0 0 9 13q-.825 0-1.412.588A1.93 1.93 0 0 0 7 15q0 .824.588 1.413Q8.175 17 9 17m-4 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h14q.824 0 1.413.587Q21 4.176 21 5v14q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21zm0-2h14V5H5z"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 1, Pizza"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 2, Poutine"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 3, Italian"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 4, Wings"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 0
    </div>
  </fieldset>
</div>
`;

exports[`MPollBody renders a poll with only non-local votes 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10q.424 0 .712-.287A.97.97 0 0 0 17 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 8h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 9q0 .424.287.713.288.287.713.287zm0 6q.424 0 .712-.287A.97.97 0 0 0 17 15a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 14h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 15q0 .424.287.713.288.287.713.287zm-7-5q.825 0 1.412-.588Q11 9.826 11 9t-.588-1.412A1.93 1.93 0 0 0 9 7q-.825 0-1.412.588A1.93 1.93 0 0 0 7 9q0 .825.588 1.412Q8.175 11 9 11m0 6q.825 0 1.412-.587Q11 15.825 11 15t-.588-1.412A1.93 1.93 0 0 0 9 13q-.825 0-1.412.588A1.93 1.93 0 0 0 7 15q0 .824.588 1.413Q8.175 17 9 17m-4 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h14q.824 0 1.413.587Q21 4.176 21 5v14q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21zm0-2h14V5H5z"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 1, Pizza, 0 votes"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 2, Poutine, 0 votes"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 3, Italian, 2 votes"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  2 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 67%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_checked"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled mx_StyledRadioButton_checked"
        >
          <input
            aria-label="Option 4, Wings, 1 vote, you voted for this option"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  1 vote
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 33%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 3
    </div>
  </fieldset>
</div>
`;

exports[`MPollBody renders an undisclosed, finished poll 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll ended"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 10.659V19q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21H5q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h8.341A6 6 0 0 0 13 5H5v14h14v-8a6 6 0 0 0 2-.341"
        />
        <path
          d="M13.803 8a6 6 0 0 0 1.88 2H13a.97.97 0 0 1-.713-.287A.97.97 0 0 1 12 9q0-.424.287-.713A.97.97 0 0 1 13 8zm2.91 7.713A.97.97 0 0 1 16 16h-3a.97.97 0 0 1-.713-.287A.97.97 0 0 1 12 15q0-.424.287-.713A.97.97 0 0 1 13 14h3q.424 0 .712.287.288.288.288.713 0 .424-.288.713m-6.299-5.3A1.93 1.93 0 0 1 9 11q-.825 0-1.412-.588A1.93 1.93 0 0 1 7 9q0-.825.588-1.412A1.93 1.93 0 0 1 9 7q.825 0 1.412.588Q11 8.175 11 9t-.588 1.412m.001 6.001A1.93 1.93 0 0 1 9 17q-.825 0-1.412-.587A1.93 1.93 0 0 1 7 15q0-.825.588-1.412A1.93 1.93 0 0 1 9 13q.825 0 1.412.588Q11 14.175 11 15q0 .824-.588 1.413m12.295-14.12a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L18 5.586l3.293-3.293a1 1 0 0 1 1.414 0"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption mx_PollOption_checked mx_PollOption_ended"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled mx_StyledRadioButton_checked"
        >
          <input
            aria-label="Option 1, Pizza, this option won the vote, 2 votes, you voted for this option"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  <div
                    class="mx_PollOption_winnerIcon"
                  />
                  2 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 50%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 2, Poutine, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_ended"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled"
        >
          <input
            aria-label="Option 3, Italian, 0 votes"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  0 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption mx_PollOption_checked mx_PollOption_ended"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_disabled mx_StyledRadioButton_checked"
        >
          <input
            aria-label="Option 4, Wings, this option won the vote, 2 votes, you voted for this option"
            disabled=""
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                >
                  <div
                    class="mx_PollOption_winnerIcon"
                  />
                  2 votes
                </div>
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 50%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 4
    </div>
  </fieldset>
</div>
`;

exports[`MPollBody renders an undisclosed, unfinished poll 1`] = `
<div>
  <fieldset
    class="mx_MPollBody"
  >
    <legend
      data-testid="pollQuestion"
    >
      <svg
        aria-label="Poll"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10q.424 0 .712-.287A.97.97 0 0 0 17 9a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 8h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 9q0 .424.287.713.288.287.713.287zm0 6q.424 0 .712-.287A.97.97 0 0 0 17 15a.97.97 0 0 0-.288-.713A.97.97 0 0 0 16 14h-3a.97.97 0 0 0-.713.287A.97.97 0 0 0 12 15q0 .424.287.713.288.287.713.287zm-7-5q.825 0 1.412-.588Q11 9.826 11 9t-.588-1.412A1.93 1.93 0 0 0 9 7q-.825 0-1.412.588A1.93 1.93 0 0 0 7 9q0 .825.588 1.412Q8.175 11 9 11m0 6q.825 0 1.412-.587Q11 15.825 11 15t-.588-1.412A1.93 1.93 0 0 0 9 13q-.825 0-1.412.588A1.93 1.93 0 0 0 7 15q0 .824.588 1.413Q8.175 17 9 17m-4 4q-.824 0-1.412-.587A1.93 1.93 0 0 1 3 19V5q0-.824.587-1.412A1.93 1.93 0 0 1 5 3h14q.824 0 1.413.587Q21 4.176 21 5v14q0 .824-.587 1.413A1.93 1.93 0 0 1 19 21zm0-2h14V5H5z"
        />
      </svg>
      What should we order for the party?
    </legend>
    <div
      class="mx_MPollBody_allOptions"
    >
      <div
        class="mx_PollOption"
        data-testid="pollOption-pizza"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 1, Pizza"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="pizza"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Pizza
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-poutine"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 2, Poutine"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="poutine"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Poutine
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-italian"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 3, Italian"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="italian"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Italian
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="mx_PollOption"
        data-testid="pollOption-wings"
      >
        <label
          class="mx_StyledRadioButton mx_PollOption_live-option mx_StyledRadioButton_enabled"
        >
          <input
            aria-label="Option 4, Wings"
            name="poll_answer_select-$mypoll"
            type="radio"
            value="wings"
          />
          <div>
            <div />
          </div>
          <div
            class="mx_StyledRadioButton_content"
          >
            <div
              aria-hidden="true"
            >
              <div
                class="mx_PollOption_content"
              >
                <div
                  class="mx_PollOption_optionText"
                >
                  Wings
                </div>
                <div
                  class="mx_PollOption_optionVoteCount"
                />
              </div>
            </div>
          </div>
          <div
            class="mx_StyledRadioButton_spacer"
          />
        </label>
        <div
          class="mx_PollOption_popularityBackground"
        >
          <div
            class="mx_PollOption_popularityAmount"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
    <div
      class="mx_MPollBody_totalVotes"
      data-testid="totalVotes"
    >
      Total votes: 4
    </div>
  </fieldset>
</div>
`;
